fixed spacing even more

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -8,7 +8,7 @@
   margin-left: auto;
   margin-right: auto;
   padding-left: 1em;
-  padding-right: 0em;
+  padding-right: 1em;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   max-width: 100%;
@@ -84,7 +84,7 @@ body {
 }
 
 .page__content {
-  padding-top: 2em;
+  padding-top: 1em;
 
   h2 {
     padding-bottom: 0.5em;
